--- a/styles/about_page.css
+++ b/styles/about_page.css
@@ -51,7 +51,7 @@
 }
 
 #picture {
-    background-image: url("/textures/me.jpg");
+    background-image: url("https://gregorywells2007.github.io/Portfolio//textures/me.jpg");
     background-size:cover;
 }
 
