--- a/styles/awards_page.css
+++ b/styles/awards_page.css
@@ -25,21 +25,33 @@
 #coachesaward.awards_card {
     grid-column: 1 / 50;
     grid-row: 1 / 60;
+    background-image: url("/textures/coaches_award.png");
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 #historyaward.awards_card {
     grid-column: 50 / 101;
     grid-row: 40 / 101;
+    background-image: url("/textures/mostoutstanding.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 #placeholder1.awards_card {
     grid-column: 50 / 101;
     grid-row: 1 / 40;
+    font-size: 2vw;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 #placeholder2.awards_card {
     grid-column: 1 / 50;
     grid-row: 60 / 90;
+    font-size: 2vw;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 #backbutton.awards_card {
