--- a/styles/community_page.css
+++ b/styles/community_page.css
@@ -37,6 +37,9 @@
     grid-row: 1 / 45;
     font-size: 1.7vw;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -45,13 +48,19 @@
     grid-row: 45 / 90;
     font-size: 1.7vw;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
 #backbutton.community_card {
     grid-column: 31 / 71;
     grid-row: 90 / 101;
-    text-align: center;
-    font-size: 3vw;
     transition: all 0.5s;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--back-button-sze);
 }
