--- a/styles/education_page.css
+++ b/styles/education_page.css
@@ -43,8 +43,11 @@
     grid-column: 15 / 60;
     grid-row: 90 / 101;
     transition: all 0.5s;
-    font-size: 3vw;
-    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: var(--back-button-sze);
 }
 #placeholder1.education_card {
     grid-column: 1 / 15;
@@ -94,22 +97,20 @@
 }
 
 .education_card#class1 {
-    background-color: black;
-    padding-left: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .education_card#class2 {
-    background-color: black;
-    padding-left: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .education_card#class3 {
-    background-color: black;
-    padding-left: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .education_card #classname {
-    font-size: 2.5vw;
+    font-size: 3vw;
+    height: 35%;
 }
 
 .education_card #classdesc {
-    font-size: 1.5vw;
+    height: 65%;
 }
